Update build.sbt
Added javafx to java options and changed javafx version.